cmake_minimum_required(VERSION 3.5)

project(hash_header_src_sep_directory)

# TODO
# create an executable file using source codes in src directory, and header files in include directory.
# hint : you might need to use add_executable(<Target Name> <Source code> ... )
# hint : you might need to use target_include_directories to help cmake find where the header files are...
# target_include_directories(<Target Name> [PRIVATE | INTERFACE | PUBLIC] <directory> ... )