project(HASH_project)

# TODO
# specify which directories CMakeLists.txt are located so that by running cmake only with CMakeLists.txt,
# it may trace through directories and create or update a new build pipeline for all the outdated codes
# hint : you might need to use add_subdirectory(<directory>)
# hint : order is important in this case... only with this case (bad example)