project(sublibrary2)

# TODO
# create a library file using codes in the directory
# hint : you might need to use add_library(<Target Name> [INTERFACE | OBJECT | STATIC | SHARED | MODULE] <source code> ... )
# hint : you might need to use target_include_directories to help cmake find where the header files are...
# target_include_directories(<Target Name> [PRIVATE | INTERFACE | PUBLIC] <directory> ... )
# hint : you mgiht need to use target_include_libraries since the source code use functions from sublibrary1...